income/expoense source input validation  and fixed width on smaller screen size

--- a/css-style/expense-page/expense.css
+++ b/css-style/expense-page/expense.css
@@ -128,6 +128,12 @@ canvas {
   opacity: 0;
 }
 
+@media (max-width: 830px) {
+  .expense-delete-button {
+    opacity: 1
+  }
+}
+
 .expense-delete-button:hover {
   opacity: 1
 }
@@ -284,7 +290,8 @@ dialog {
 
 .expense-amount-input-alert,
 .expense-date-input-alert,
-.emoji-input-alert {
+.emoji-input-alert,
+.expense-source-input-alert {
   color: red;
   font-size: 13px;
 } 
