--- a/css-style/shared/sidebar.css
+++ b/css-style/shared/sidebar.css
@@ -2,9 +2,10 @@
   position: fixed;
   width: 220px;
   background-color: white;
-  left: 0;
-  bottom: 0;
   top: 50px;
+  left: 0;
+  height: calc(100vh - 50px);
+  overflow-y: auto;
 }
 
 .side-bar-link {
